Fixed a layout issue with the progress bar

--- a/src/components/CauseTile/CauseTile.css
+++ b/src/components/CauseTile/CauseTile.css
@@ -44,7 +44,6 @@
   padding: 0.3rem 0;
   position: absolute;
   width: 100%;
-  z-index: 2;
 }
 
 .CauseTile .wrapper img {
